# bookhound

./: .dockerignore  .gitignore  AGENTS.md  compose.local.yml  pyproject.toml
config/: bookhound.docker.example.toml  bookhound.example.toml
docker/: Dockerfile.local
docs/: architecture.md  implementation-tasks.md
scripts/: docker-local-build.sh  docker-local-init.sh  docker-local-run.sh  docker-local-shell.sh  install-smoke.sh  lnav-bookhound.sh
src/bookhound/: __init__.py  __main__.py  app_factory.py  arxiv.py  cli.py  jobs.py  (+28 more)
tests/: conftest.py  test_arxiv_adapter.py  test_cli.py  test_cli_config_option.py  test_cli_logging.py  test_collect_cli.py  test_collect_incremental_workflow.py  test_collect_workflow.py  test_collection_steps.py  test_common_crawl_adapter.py  test_config.py  test_configuration.py  test_crawl_and_link_sources.py  test_daemon_runner.py  test_database_schema.py  test_deduplication.py  test_discovery_pipeline.py  test_domain_models.py  test_download_cli.py  test_download_cli_workflow.py  test_download_persistence.py  test_download_service.py  test_downloader.py  test_example_config.py  test_external_index_sources.py  test_google_adapter.py  test_html_evidence_extraction.py  test_html_license_evidence.py  test_http_client.py  test_incremental_collect_persistence.py  test_jobs_daemon_export.py  test_jobs_export_cli.py  test_license_classifier.py  test_link_expansion_adapter.py  test_lnav_format.py  test_logging_configuration.py  test_operational_smoke.py  test_package.py  test_persistence_and_download_logging.py  test_persistence_identity.py  (+19 more)
(+1 files in other folders)
